# pyadmin

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
pyadmin/chromium/: bookmarks.py  get_passwords.py  pass.py
pyadmin/epub/: annotations.py  dates.py  metadata.py  people.py  words.py
pyadmin/scripts/: bookmarks_to_csv.py  csv_to_bookmarks.py  epub_annot.py
pyadmin/torrent/: torrent.py
